--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@react-navigation/native-stack": "^6.6.1",
     "react": "17.0.2",
     "react-native": "0.68.1",
+    "react-native-confirmation-code-field": "^7.3.0",
+    "react-native-hide-show-password-input": "^1.2.0",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1"
