--- a/package.json
+++ b/package.json
@@ -10,17 +10,22 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.3",
     "@react-native-firebase/app": "^14.8.0",
     "@react-native-firebase/auth": "^14.8.0",
+    "@react-native-firebase/firestore": "^14.8.0",
+    "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.1",
     "react": "17.0.2",
     "react-native": "0.68.1",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-confirmation-code-field": "^7.3.0",
     "react-native-hide-show-password-input": "^1.2.0",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-safe-area-context": "^4.2.4",
-    "react-native-screens": "^3.13.1"
+    "react-native-screens": "^3.13.1",
+    "react-native-svg": "^12.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.9",
